<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark"
    >

    <LinearLayout
        android:layout_width="426dp"
        android:layout_height="120dp"
        android:background="@color/greyBox"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="25dp">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:shadowColor="#00ccff"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/search_mp3"
            android:textColor="@color/whiteText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/dropdown"
            android:layout_width="238dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/dropdown"
            android:backgroundTint="@color/colorAccent"
            android:popupBackground="@color/whiteText"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="84dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="-22dp"
            android:contentDescription="@string/dropicon"
            android:src="@drawable/dropicon" />

        <Button
            android:id="@+id/selectBtn"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="61dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="64dp"
            android:gravity="center_horizontal"
            android:onClick="select_onclick"
            android:text="@string/select"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/gradientbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:contentDescription="@string/diskimage"
            android:src="@drawable/diskimage" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/now_playing"
        android:textColor="@color/whiteText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/music_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/song_name"
        android:textColor="@color/whiteText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_title_textview"
        app:layout_constraintVertical_bias="0.301">

        <Button
            android:id="@+id/play_pause_button"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/pauseplay"
            android:onClick="pauseplay_onclick"
            />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="243dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/stop_icon"
            android:onClick="stop_onclick"
            />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="268dp"
        android:layout_height="18dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_title_textview"
        android:textColor="@color/whiteText"
        android:indeterminateTint="@color/whiteText"
        />


</androidx.constraintlayout.widget.ConstraintLayout>